Added divisionals results Fixed scripts to handle 7 team divisionals

--- a/Automation/html/summary.html
+++ b/Automation/html/summary.html
@@ -12,7 +12,7 @@
         <td><img id=logo src='images/mcsl.jpg'>
           <td><h1 id=title>Montgomery County Swim League</h1>
             <h2 id=subtitle>Division O - 2014</h2>
-              <div id=date>Report Generated Tue Jul 15 08:25:16 2014</div>
+              <div id=date>Report Generated Sat Jul 19 16:26:05 2014</div>
       </tr>
       <tr id=links>
         <td></td>
@@ -41,40 +41,40 @@
    <td class=reportbold>Wheaton Woods</td>
    <td class=reportbody>30</td>
    <td class=reportbody>8</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>38</td>
+   <td class=reportbody>20</td>
+   <td class=reportbold>58</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>2</td>
    <td class=reportbold>Washingtonian Woods Waves Swim</td>
    <td class=reportbody>24</td>
    <td class=reportbody>6</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>30</td>
+   <td class=reportbody>16</td>
+   <td class=reportbold>46</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>3</td>
    <td class=reportbold>Flower Hill Dolphins</td>
    <td class=reportbody>18</td>
    <td class=reportbody>10</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>28</td>
+   <td class=reportbody>12</td>
+   <td class=reportbold>40</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>4</td>
    <td class=reportbold>Tanglewood</td>
    <td class=reportbody>12</td>
    <td class=reportbody>4</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>16</td>
+   <td class=reportbody>4</td>
+   <td class=reportbold>20</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>5</td>
    <td class=reportbold>Middlebridge Marlins Swim Team</td>
    <td class=reportbody>6</td>
    <td class=reportbody>0</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>6</td>
+   <td class=reportbody>8</td>
+   <td class=reportbold>14</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>6</td>
@@ -257,6 +257,27 @@
 <h2 class=reporthead>Divisionals</h2>
 <div class=mcsllink><a href='http://mcsl.org/results/2014/week6/Div_O.txt' target=_blank>Full MCSL Report</a></div>
 <table class=report>
+ <tr><td class=reportbold>Wheaton Woods</td>
+     <td class=reportbody>1142.5</td>
+ </tr>
+ <tr><td class=reportbold>Washingtonian Woods Waves Swim</td>
+     <td class=reportbody>1138.5</td>
+ </tr>
+ <tr><td class=reportbold>Flower Hill Dolphins</td>
+     <td class=reportbody>1096.5</td>
+ </tr>
+ <tr><td class=reportbold>Middlebridge Marlins Swim Team</td>
+     <td class=reportbody>815.5</td>
+ </tr>
+ <tr><td class=reportbold>Tanglewood</td>
+     <td class=reportbody>759</td>
+ </tr>
+ <tr><td class=reportbold>Kemp Mill Kangaroos</td>
+     <td class=reportbody>591</td>
+ </tr>
+ <tr><td class=reportbold>Parkland Whales</td>
+     <td class=reportbody>246</td>
+ </tr>
 </table>
 
         </td>
