updates to eligible swimmer code

--- a/Automation/html/summary.html
+++ b/Automation/html/summary.html
@@ -12,7 +12,7 @@
         <td><img id=logo src='images/mcsl.jpg'>
           <td><h1 id=title>Montgomery County Swim League</h1>
             <h2 id=subtitle>Division N - 2017</h2>
-              <div id=date>Report Generated Sat Jul  1 14:54:13 2017</div>
+              <div id=date>Report Generated Tue Jul 11 09:02:59 2017</div>
       </tr>
       <tr id=links>
         <td></td>
@@ -22,6 +22,7 @@
           <a class=menubar href=relay.html>Relay Results</a>
           <a class=menubar href=carnival.html>Relay Carnival</a>
           <a class=menubar href=stats.html>Statistics</a>
+          <a class=menubar href=eligible.html>Divisional Eligibility</a>
         </td>
       </tr>
       <tr><td></td>
@@ -39,29 +40,37 @@
  <tr class=reportbody>
    <td class=reportbody>1</td>
    <td class=reportbold>Plantations Piranhas</td>
-   <td class=reportbody>18</td>
+   <td class=reportbody>24</td>
+   <td class=reportbody>10</td>
    <td class=reportbody>0</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>18</td>
+   <td class=reportbold>34</td>
  </tr>
  <tr class=reportbody>
-   <td class=reportbody>1</td>
+   <td class=reportbody>2</td>
    <td class=reportbold>Flower Hill Dolphins</td>
-   <td class=reportbody>18</td>
+   <td class=reportbody>24</td>
+   <td class=reportbody>8</td>
    <td class=reportbody>0</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>18</td>
+   <td class=reportbold>32</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>3</td>
    <td class=reportbold>Long Branch Water Wizards</td>
    <td class=reportbody>12</td>
+   <td class=reportbody>4</td>
    <td class=reportbody>0</td>
+   <td class=reportbold>16</td>
+ </tr>
+ <tr class=reportbody>
+   <td class=reportbody>4</td>
+   <td class=reportbold>Fallsmead</td>
+   <td class=reportbody>6</td>
+   <td class=reportbody>6</td>
    <td class=reportbody>0</td>
    <td class=reportbold>12</td>
  </tr>
  <tr class=reportbody>
-   <td class=reportbody>4</td>
+   <td class=reportbody>5</td>
    <td class=reportbold>James Creek Swim Team</td>
    <td class=reportbody>6</td>
    <td class=reportbody>0</td>
@@ -69,20 +78,12 @@
    <td class=reportbold>6</td>
  </tr>
  <tr class=reportbody>
-   <td class=reportbody>5</td>
-   <td class=reportbold>Fallsmead</td>
-   <td class=reportbody>0</td>
-   <td class=reportbody>0</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>0</td>
- </tr>
- <tr class=reportbody>
-   <td class=reportbody>5</td>
+   <td class=reportbody>6</td>
    <td class=reportbold>Willows of Potomac</td>
    <td class=reportbody>0</td>
+   <td class=reportbody>2</td>
    <td class=reportbody>0</td>
-   <td class=reportbody>0</td>
-   <td class=reportbold>0</td>
+   <td class=reportbold>2</td>
  </tr>
 </table>
 <h1 class=reporthead>Dual Meet Results</h1>
@@ -161,6 +162,31 @@
 </tr>
 </table>
 <div class=mcsllink><a href='http://mcsl.org/results/2017/week3' target=_blank>All Week 3 MCSL Reports</a></div>
+<h2 class=reporthead>Week 4</h2>
+<table id=week4 class=report>
+ <tr class=reporthead>
+<td class=reportbold class=teamname>Plantations Piranhas</td>
+<td class=reportbody>475</td>
+<td class=reportbold class=teamname>Willows of Potomac</td>
+<td class=reportbody>282</td>
+<td class=reporturl><a class=mcsldual href='http://mcsl.org/results/2017/week4/PLTvWLP.html' target=_blank>Full MCSL Report</a>
+</tr>
+ <tr class=reporthead>
+<td class=reportbold class=teamname>Fallsmead</td>
+<td class=reportbody>454</td>
+<td class=reportbold class=teamname>James Creek Swim Team</td>
+<td class=reportbody>295</td>
+<td class=reporturl><a class=mcsldual href='http://mcsl.org/results/2017/week4/FMvJC.html' target=_blank>Full MCSL Report</a>
+</tr>
+ <tr class=reporthead>
+<td class=reportbold class=teamname>Flower Hill Dolphins</td>
+<td class=reportbody>393.5</td>
+<td class=reportbold class=teamname>Long Branch Water Wizards</td>
+<td class=reportbody>373.5</td>
+<td class=reporturl><a class=mcsldual href='http://mcsl.org/results/2017/week4/LBvFH.html' target=_blank>Full MCSL Report</a>
+</tr>
+</table>
+<div class=mcsllink><a href='http://mcsl.org/results/2017/week4' target=_blank>All Week 4 MCSL Reports</a></div>
 <h2 class=reporthead>Divisionals</h2>
 <div class=mcsllink><a href='http://mcsl.org/results/2017/week6/Div_N.txt' target=_blank>Full MCSL Report</a></div>
 <table class=report>
