Eligibility page + data updates

--- a/Automation/html/summary.html
+++ b/Automation/html/summary.html
@@ -12,7 +12,7 @@
         <td><img id=logo src='images/mcsl.jpg'>
           <td><h1 id=title>Montgomery County Swim League</h1>
             <h2 id=subtitle>Division N - 2017</h2>
-              <div id=date>Report Generated Tue Jul 11 09:02:59 2017</div>
+              <div id=date>Report Generated Sun Jul 16 18:40:09 2017</div>
       </tr>
       <tr id=links>
         <td></td>
@@ -40,10 +40,10 @@
  <tr class=reportbody>
    <td class=reportbody>1</td>
    <td class=reportbold>Plantations Piranhas</td>
-   <td class=reportbody>24</td>
+   <td class=reportbody>30</td>
    <td class=reportbody>10</td>
    <td class=reportbody>0</td>
-   <td class=reportbold>34</td>
+   <td class=reportbold>40</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>2</td>
@@ -56,18 +56,18 @@
  <tr class=reportbody>
    <td class=reportbody>3</td>
    <td class=reportbold>Long Branch Water Wizards</td>
-   <td class=reportbody>12</td>
+   <td class=reportbody>18</td>
    <td class=reportbody>4</td>
    <td class=reportbody>0</td>
-   <td class=reportbold>16</td>
+   <td class=reportbold>22</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>4</td>
    <td class=reportbold>Fallsmead</td>
-   <td class=reportbody>6</td>
+   <td class=reportbody>12</td>
    <td class=reportbody>6</td>
    <td class=reportbody>0</td>
-   <td class=reportbold>12</td>
+   <td class=reportbold>18</td>
  </tr>
  <tr class=reportbody>
    <td class=reportbody>5</td>
@@ -187,6 +187,31 @@
 </tr>
 </table>
 <div class=mcsllink><a href='http://mcsl.org/results/2017/week4' target=_blank>All Week 4 MCSL Reports</a></div>
+<h2 class=reporthead>Week 5</h2>
+<table id=week5 class=report>
+ <tr class=reporthead>
+<td class=reportbold class=teamname>Plantations Piranhas</td>
+<td class=reportbody>444</td>
+<td class=reportbold class=teamname>Flower Hill Dolphins</td>
+<td class=reportbody>338</td>
+<td class=reporturl><a class=mcsldual href='http://mcsl.org/results/2017/week5/FHvPLT.html' target=_blank>Full MCSL Report</a>
+</tr>
+ <tr class=reporthead>
+<td class=reportbold class=teamname>Long Branch Water Wizards</td>
+<td class=reportbody>433</td>
+<td class=reportbold class=teamname>James Creek Swim Team</td>
+<td class=reportbody>339</td>
+<td class=reporturl><a class=mcsldual href='http://mcsl.org/results/2017/week5/JCvLB.html' target=_blank>Full MCSL Report</a>
+</tr>
+ <tr class=reporthead>
+<td class=reportbold class=teamname>Fallsmead</td>
+<td class=reportbody>419</td>
+<td class=reportbold class=teamname>Willows of Potomac</td>
+<td class=reportbody>351</td>
+<td class=reporturl><a class=mcsldual href='http://mcsl.org/results/2017/week5/WLPvFM.html' target=_blank>Full MCSL Report</a>
+</tr>
+</table>
+<div class=mcsllink><a href='http://mcsl.org/results/2017/week5' target=_blank>All Week 5 MCSL Reports</a></div>
 <h2 class=reporthead>Divisionals</h2>
 <div class=mcsllink><a href='http://mcsl.org/results/2017/week6/Div_N.txt' target=_blank>Full MCSL Report</a></div>
 <table class=report>
